# adc-hackathon-2024-05-t1

./: .coverage  MANIFEST.in  README.md  pyproject.toml  rebuild.sh  requirements.txt  retest.sh  setup.py  tox.ini  unittest_python_UAT.ipynb
adchackathon202405t1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
env/: pyvenv.cfg
misc/: README.md  gpt-action_v2.yml
src/: OLD_test_functions.py  __init__.py  __main__.py  asdf1.py  asdf2.py  inventory_manager.py  pig_latin.py  testing.ipynb  unittest_flow.py  unittest_flow2.py
tests/unit/: test_functions.py
workbooks/: unittest_python_UAT.ipynb
